--- a/07_javascript/02_web/01_DOM/02_node-traversing/02_parent-node.html
+++ b/07_javascript/02_web/01_DOM/02_node-traversing/02_parent-node.html
@@ -8,7 +8,8 @@
 <body>
     <h1>02. 부모 노드 탐색</h1>
     <pre>
-        부모 노드를 탐색하기 위해서는 parentNode 프로퍼티를 사용할 수 있다.
+        부모 노드를 탐색하기 위해서는
+        parentNode 프로퍼티를 사용할 수 있다.
     </pre>
     <ul id="lists">
         <li class="coffee">커피</li>
