--- a/07_javascript/02_web/01_DOM/01_get-element-node/02_use-tag-name.html
+++ b/07_javascript/02_web/01_DOM/01_get-element-node/02_use-tag-name.html
@@ -9,8 +9,10 @@
     <h1>02. 태그의 이름을 이용한 요소 노드 취득</h1>
     <pre>
         getElementsByTagName()
-        메소드는 이름에서 나온 것처럼 해당하는 이름을 가진 모든 요소 노드를 가져온다.
-        DOM의 컬렉션 객체인 HTMLCollection 객체를 반환해준다.
+        메소드는 이름에서 나온 듯 해당하는 이름을
+        가진 모든 요소 노드를 가져온다.
+        DOM 의 컬렉션 객체인
+        HTMLCollection 객체를 반환해준다.
     </pre>
     <ul id="food">
         <li>김치찌개</li>
@@ -25,14 +27,16 @@
     <script>
         const $lists = document.getElementsByTagName('li');
         console.log($lists);
-        // HTMLCollection - 객체 배열의 느낌
-        // length 프로퍼티를 가지고 있기 때문에 반복문을 사용할 수 있을 거 같다.
+        // HTMLCollection 은 - 객체 배열의 느낌이다.
+        // length 프로퍼티를 가지고 있기 때문에
+        // 반복문을 사용할 수 있을 것 같은 느낌이다.
 
         // 반복문을 사용해서 배경색 변경 처리
         let change = 0;
         for(let i = 0; i < $lists.length; i++) {
-            $lists[i].style.backgroundColor = "rgb(130, 220, " + change + ")";
-            change +=50;
+            $lists[i].style.backgroundColor
+                = "rgb(130, 220, " + change + ")";
+                change += 50;
         }
 
         // forEach 를 사용해서 순회하며 color 프로퍼티 값 변경
@@ -40,12 +44,16 @@
         const test = [...$lists];
         console.log(test);
 
-        // forEach를 사용하기 위해서는 배열이 필요하기 때문에 스프레드 문법을 사용해서 배열로 변경했다.
-        test.forEach(item => item.style.color = 'navy');
+        // forEach 를 사용하기 위해서는 배열이 필요하기 때문에
+        // 스프레드 문법을 사용해서 배열로 변경을 해주었다.
 
-        // 해당하는 태그 이름이 존재하지 않는다면 비어있는 HTMLCollection 객체를 반환한다.
+        test.forEach(item => item.style.color = 'red');
+
+        // 해당하는 태그 이름이 존재하지 않는다면
+        // 비어있는 HTMLCollection 객체를 반환해준다.
         const $noElement = document.getElementsByTagName('span');
-        console.log($noElement)
+        console.log($noElement);
+
     </script>
 </body>
 </html>
