--- a/07_javascript/02_web/01_DOM/01_get-element-node/03_use-class.html
+++ b/07_javascript/02_web/01_DOM/01_get-element-node/03_use-class.html
@@ -6,11 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>03_class 속성을 이용한 요소 노드 취득</h1>
+    <h1>03. class 속성을 이용한 요소 노드 취득</h1>
     <pre>
-        getElementByClassName()
-        인자로 전달받은 클래스 어트리뷰트 값을 갖는 모든 요소를 탐색하여 반환한다.
-        반항형이 HTMLCollection 타입의 객체이다.
+        getElementsByClassName()
+        인자로 전달 받은 클래스 어트리뷰트 값을
+        갖는 모든 요소를 탐색하여 반환한다.
+        반환형이 HTMLCollection 타입의 객체이다.
     </pre>
     <ul id="use">
         <li class="drink coffee">커피</li>
@@ -19,21 +20,23 @@
     </ul>
     <ul id="noUse">
         <li class="drink soju">소주</li>
-        <li class="drink heer">맥주</li>
+        <li class="drink beer">맥주</li>
     </ul>
     <script>
-        const $drinks = document.getElementsByClassName('drink');
+        const $drinks =
+                document.getElementsByClassName('drink');
         console.log($drinks);
 
         // forEach 쓰기 위해 스프레드 문법 사용
-        [...$drinks].forEach(drink => drink.style.color = 'red');
-        const $coffee = document.getElementsByClassName('drink coffee');
+        [...$drinks].forEach(drink => drink.style.color = 'red')
+
+        const $coffee =
+                document.getElementsByClassName('drink coffee');
         console.log($coffee);
 
         const $use = document.getElementById('use');
-        const $usechild = $use.getElementsByClassName('drink');
-        [...$usechild].forEach(drink => drink.style.color = 'blue');
-        // console.log
+        const $useChild = $use.getElementsByClassName('drink');
+        [...$useChild].forEach(drink => drink.style.color = 'blue');
     </script>
 </body>
 </html>
